# gmpc-mdcover-hack

./: autogen.sh  configure.ac
po/: bs.po  de.po  es.po  fr.po  nl.po  pl.po  ro.po  ru.po  sq.po  sv.po  zh_CN.po
src/: Makefile.am  plugin.c
